<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/selectTimeSheetCancel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dialog_overlay"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/selectTimeToolbarTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorPrimary"
        android:elevation="16dp"
        android:orientation="horizontal"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:visibility="gone"
        tools:visibility="visible">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/selectTimeTopCancelIV"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_cross" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:drawablePadding="16dp"
            android:text="@string/food_select_time"
            android:textSize="?attr/text_size_medium"
            app:drawableStartCompat="@drawable/ic_clock"
            tools:textSize="@dimen/text_size_medium" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/selectTimeTopDoneIV"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_check"
            app:tint="@color/material_primary" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/selectTimeBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_top_24dp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        app:behavior_peekHeight="0dp"
        app:behavior_skipCollapsed="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bottom_sheet_handle_view" />

        <LinearLayout
            android:id="@+id/selectTimeToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/selectTimeCancelIV"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:padding="4dp"
                app:srcCompat="@drawable/ic_cross" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:drawablePadding="16dp"
                android:text="@string/food_select_time"
                android:textSize="?attr/text_size_medium"
                app:drawableStartCompat="@drawable/ic_clock" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/selectTimeDoneIV"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:padding="4dp"
                app:srcCompat="@drawable/ic_check"
                app:tint="@color/material_primary" />

        </LinearLayout>

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/selectTimeSliderRS"
            style="@style/Widget.App.Slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:stepSize="1.0"
            android:valueFrom="1.0"
            android:valueTo="180.0"
            app:layout_constraintTop_toBottomOf="@id/selectTimeToolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/selectTimeSliderRS">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/selectTimeFromET"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/rounded_border_bg_12dp"
                android:gravity="center"
                android:hint="@string/minute"
                android:inputType="number"
                android:maxEms="3"
                android:padding="8dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/to" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/selectTimeToET"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/rounded_border_bg_12dp"
                android:gravity="center"
                android:hint="@string/minute"
                android:inputType="number"
                android:maxEms="3"
                android:padding="8dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>